--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Simple Number Prediction 
+Simple Number Prediction
+
+For converting log file to csv, bash shell script and log file 
+must be in the same directory. 
+The csv file is already created.  
