--- a/README
+++ b/README
@@ -1,15 +1,13 @@
 Simple Number Prediction
 
-For converting log file to csv, bash shell script and log file 
-must be in the same directory. 
+For converting log file to csv: 
+bash shell script and log file must be in the same directory. 
 The csv file is already created.  
 
-Pro spouštění BP.tex jde použit přikazový řádek s komandou 
+
+Pro spouštění BP.tex: 
 
 $ latex BP.tex 
-
-pak komandou 
-$ E
-jde ho upravovat.  
+$ E       //uprava textu
 
 Neboli je možno použit textový editor Texmaker. 
