--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Simple Number Prediction
 For converting log file to csv: 
 bash shell script and log file must be in the same directory. 
 The csv file is already created.  
+Data.csv - updated file: deleted repeats in rows. 
 
 
 Pro spouštění BP.tex: 
